--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,7 @@
           <excludes>
             <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
 <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
+            <exclude>**/integration-tests/**</exclude>
           </excludes>
         </configuration>
         <reportSets>
