--- a/pom.xml
+++ b/pom.xml
@@ -215,8 +215,8 @@
           <excludes>
             <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
 <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
-            <exclude>**/integration-tests/**</exclude>
-            <exclude>**/discovery-tests/**</exclude>
+            <exclude>**/integration-tests/**/src/main/java/**</exclude>
+            <exclude>**/discovery*tests/**</exclude>
           </excludes>
         </configuration>
         <reportSets>
