--- a/pom.xml
+++ b/pom.xml
@@ -215,9 +215,12 @@
           <excludes>
             <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
 <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
-            <exclude>**/integration*/**</exclude>
+            <exclude>**/discovery*/price*/**</exclude>
 <!--            <exclude>**/*router-client/**</exclude>-->
           </excludes>
+          <excludeRoots>
+            <excludeRoot>**/integration*/**</excludeRoot>
+          </excludeRoots>
         </configuration>
         <reportSets>
           <reportSet><!-- by default, id = "default" -->
