--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -55,8 +55,14 @@
         <version>3.16.0</version>
         <configuration>
           <excludes>
-            <exclude>**/integration-tests/**</exclude>
+            <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
+            <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
+            <exclude>**/discovery*/price*/**</exclude>
+            <!--            <exclude>**/*router-client/**</exclude>-->
           </excludes>
+          <excludeRoots>
+            <excludeRoot>**/integration*/**</excludeRoot>
+          </excludeRoots>
         </configuration>
         <reportSets>
           <reportSet><!-- by default, id = "default" -->
