--- a/pmd/violationExclusions/exclude-pmd.properties
+++ b/pmd/violationExclusions/exclude-pmd.properties
@@ -16,3 +16,4 @@
 #
 com.huaweicloud.common.transport.RBACRequestAuthHeaderProvider=AccessorMethodGeneration
 com.huaweicloud.common.util.Cipher=UseVarargs
+com.huaweicloud.sample.SchemaController=JUnitTestContainsTooManyAsserts,UseStandardCharsets
