--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -47,4 +47,19 @@
       <artifactId>assertj-core</artifactId>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>3.16.0</version>
+        <configuration>
+          <excludes>
+            <exclude>**/discovery*/**</exclude>
+            <exclude>discovery*/**</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
