--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
           <excludes>
 <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
 <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
-            <exclude>**/*route*/**</exclude>
+<!--            <exclude>**/*route*/**</exclude>-->
           </excludes>
         </configuration>
         <executions>
