--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
 <!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
             <exclude>**/*route*/**</exclude>
             <exclude>**/discovery*/price*/**</exclude>
+            <exclude>**/discovery*/order*/**</exclude>
           </excludes>
           <excludeRoots>
             <excludeRoot>**/integration*/**</excludeRoot>
