--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -55,6 +55,7 @@
         <version>3.16.0</version>
         <configuration>
           <excludes>
+            <!--Because this module is not included in the parent POM, it can only be configured here. All directories of this module can be ignored-->
             <exclude>**/**</exclude>
           </excludes>
         </configuration>
