--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,7 @@
         <version>3.16.0</version>
         <configuration>
           <rulesets>
+            <!-- A rule set, that comes bundled with PMD -->
             <ruleset>pmd/rulesets/bestpractices.xml</ruleset>
           </rulesets>
           <!-- failOnViolation is actually true by default, but can be disabled -->
@@ -166,10 +167,12 @@
           <printFailingErrors>true</printFailingErrors>
           <!-- enable incremental analysis -->
           <analysisCache>false</analysisCache>
+          <!--It is possible to exclude some sources from PMD check to prevent failures.-->
           <excludeFromFailureFile>pmd/violationExclusions/exclude-pmd.properties</excludeFromFailureFile>
           <excludes>
-<!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
-<!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
+            <!--Exclude the directories you don't want to check, but it only works for sub modules. Please refer to the following example-->
+            <!--<exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
+            <!--<exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
           </excludes>
         </configuration>
         <executions>
@@ -210,12 +213,6 @@
           <!-- enable incremental analysis -->
           <analysisCache>false</analysisCache>
           <excludeFromFailureFile>pmd/violationExclusions/exclude-pmd.properties</excludeFromFailureFile>
-          <excludes>
-            <!--            <exclude>**/RouterServiceInstanceListSupplier.java</exclude>-->
-<!--            <exclude>**/com/huaweicloud/router/client/loabalancer/**</exclude>-->
-            <exclude>**/discovery*/price*/**</exclude>
-            <exclude>**/*route*/**</exclude>
-          </excludes>
         </configuration>
         <reportSets>
           <reportSet><!-- by default, id = "default" -->
