--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,38 @@
           </excludes>
         </configuration>
       </plugin>
+      <!--SpotBugs-->
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.5.2.0</version>
+        <dependencies>
+          <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+          <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs</artifactId>
+            <version>4.5.3</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <!--Analysis Effort-->
+          <effort>Max</effort>
+          <!--Minimun Condidence-->
+          <threshold>Medium</threshold>
+          <!--Minimum Rank-->
+          <maxRank>20</maxRank>
+          <!--          <includeFilterFile>spotbugs-security/spotbugs-security-include.xml</includeFilterFile>-->
+          <excludeFilterFile>spotbugs-security/spotbugs-security-exclude.xml</excludeFilterFile>
+          <includeTests>false</includeTests>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
