--- a/integration-tests/cse-v2/provider/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/provider/src/main/resources/bootstrap.yml
@@ -32,14 +32,18 @@ spring:
       discovery:
         enabled: true
         watch: false
-        address: ${CSE_V2_SC}
+        #address: ${CSE_V2_SC}
+        address: http://127.0.0.1:30100
         appName: cse-v2-test-application
         serviceName: ${spring.application.name}
         version: 0.0.1
         healthCheckInterval: 30
       config:
-        serverAddr: ${CSE_V2_CC}
+        #serverAddr: ${CSE_V2_CC}
+        serverAddr: http://127.0.0.1:30110
         serverType: kie
+        #enabled: false
+
 
 #      credentials:
 #        account:
