--- a/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
@@ -26,11 +26,11 @@ spring:
         appName: cse-v2-test-application
         serviceName: ${spring.application.name}
         watch: false
-        address: http://127.0.0.1:30100
+        address: ${CSE_V2_SC}
         version: 0.0.1
         healthCheckInterval: 30
       config:
-        serverAddr: http://127.0.0.1:30110
+        serverAddr: ${CSE_V2_CC}
         serverType: kie
 
 #      credentials:
