[#632] Expand the health check interface. (#633)

--- a/spring-cloud-huawei-bom/pom.xml
+++ b/spring-cloud-huawei-bom/pom.xml
@@ -37,6 +37,11 @@
       <!-- this project -->
       <dependency>
         <groupId>com.huaweicloud</groupId>
+        <artifactId>spring-cloud-starter-huawei-actuator</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-discovery</artifactId>
         <version>${project.version}</version>
       </dependency>
