--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <java.version>1.8</java.version>
     <!-- spring-cloud-dependencies do not import spring-boot-dependencies, spring-boot-dependencies
      import spring-framework-bom. No need configure spring version. -->
+    <spring.version>5.3.18</spring.version>
     <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
     <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
     <servicecomb.version>2.7.0</servicecomb.version>
