--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
     <java.version>1.8</java.version>
     <!-- spring-cloud-dependencies do not import spring-boot-dependencies, spring-boot-dependencies
      import spring-framework-bom. No need configure spring version. -->
-    <spring-cloud.version>2020.0.3</spring-cloud.version>
-    <spring-boot.version>2.5.3</spring-boot.version>
+    <spring.version>5.3.18</spring.version>
+    <spring-cloud.version>2020.0.5</spring-cloud.version>
+    <spring-boot.version>2.5.12</spring-boot.version>
     <servicecomb.version>2.6.3</servicecomb.version>
   </properties>
 
