--- a/spring-cloud-huawei-discovery/pom.xml
+++ b/spring-cloud-huawei-discovery/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>spring-cloud-context</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-huawei-common</artifactId>
     </dependency>
