--- a/integration-tests/discovery-tests/discovery-tests-client/pom.xml
+++ b/integration-tests/discovery-tests/discovery-tests-client/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
