--- a/spring-cloud-huawei-common/pom.xml
+++ b/spring-cloud-huawei-common/pom.xml
@@ -76,6 +76,7 @@
       <artifactId>service-center-client</artifactId>
     </dependency>
 
+    <!-- begin extensions module -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
@@ -87,10 +88,16 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>annotations</artifactId>
       <scope>provided</scope>
     </dependency>
+    <!-- end extensions module -->
 
     <dependency>
       <groupId>org.junit.platform</groupId>
