[#488]support invocation context in requests. part2: add gateway tests

--- a/integration-tests/discovery-tests/pom.xml
+++ b/integration-tests/discovery-tests/pom.xml
@@ -29,6 +29,7 @@
 
   <modules>
     <module>common</module>
+    <module>gateway</module>
     <module>price-provider</module>
     <module>order-consumer</module>
     <module>account-provider</module>
