--- a/integration-tests/discovery-tests/account-provider/pom.xml
+++ b/integration-tests/discovery-tests/account-provider/pom.xml
@@ -26,6 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>account-provider</artifactId>
+  <name>Integration Tests::Discovery Tests::Account Provider</name>
 
   <dependencies>
     <dependency>
