--- a/integration-tests/discovery-tests/common/pom.xml
+++ b/integration-tests/discovery-tests/common/pom.xml
@@ -26,6 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>discovery-tests-common</artifactId>
+  <name>Integration Tests::Discovery Tests::Common</name>
 
   <dependencies>
     <dependency>
