--- a/integration-tests/discovery-tests/discovery-tests-client/pom.xml
+++ b/integration-tests/discovery-tests/discovery-tests-client/pom.xml
@@ -26,6 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>discovery-tests-client</artifactId>
+  <name>Integration Tests::Discovery Tests::Discovery Tests Client</name>
 
   <dependencies>
     <dependency>
@@ -67,6 +68,37 @@
                     <ports>
                       <port>service.center.port:30100</port>
                     </ports>
+                  </run>
+                </image>
+
+                <image>
+                  <name>discovery-gateway-test:${project.version}</name>
+                  <alias>discovery-gateway-test</alias>
+                  <run>
+                    <env>
+                      <JAVA_OPTS>
+                        -Dspring.cloud.servicecomb.discovery.address=http://sc.servicecomb.io:30100
+                      </JAVA_OPTS>
+                      <JAR_PATH>/maven/discovery-gateway-test-${project.version}.jar</JAR_PATH>
+                    </env>
+                    <links>
+                      <link>service-center:sc.servicecomb.io</link>
+                    </links>
+                    <wait>
+                      <log>register microservice successfully</log>
+                      <tcp>
+                        <ports>
+                          <port>9090</port>
+                        </ports>
+                      </tcp>
+                      <time>120000</time>
+                    </wait>
+                    <ports>
+                      <port>9090:9090</port>
+                    </ports>
+                    <dependsOn>
+                      <container>service-center</container>
+                    </dependsOn>
                   </run>
                 </image>
 
