--- a/integration-tests/discovery-tests/gateway/pom.xml
+++ b/integration-tests/discovery-tests/gateway/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
 
   ~ Copyright (C) 2020-2022 Huawei Technologies Co., Ltd. All rights reserved.
@@ -15,40 +14,38 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://maven.apache.org/POM/4.0.0"
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>discovery-tests</artifactId>
     <version>1.10.0-2020.0.x-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
-  <name>Integration Tests::Discovery Tests::Order Consumer Test</name>
-  <artifactId>order-consumer-test</artifactId>
+
+  <name>Integration Tests::Discovery Tests::Gateway</name>
+  <artifactId>discovery-gateway-test</artifactId>
+  <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
-      <groupId>com.huaweicloud</groupId>
-      <artifactId>discovery-tests-common</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-gateway</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
-      <artifactId>spring-cloud-starter-huawei-service-engine</artifactId>
+      <artifactId>spring-cloud-starter-huawei-service-engine-gateway</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.swagger</groupId>
-      <artifactId>swagger-core</artifactId>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-reactor</artifactId>
     </dependency>
   </dependencies>
 
@@ -65,7 +62,7 @@
     <profile>
       <id>docker</id>
       <properties>
-        <server.port>8088</server.port>
+        <server.port>10088</server.port>
       </properties>
       <build>
         <plugins>
