--- a/integration-tests/discovery-tests/gateway/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/gateway/src/main/resources/bootstrap.yaml
@@ -29,5 +29,6 @@ spring:
         address: ${PAAS_CSE_SC_ENDPOINT:http://127.0.0.1:30100}
         version: 0.0.1
         healthCheckInterval: 30
+        enableServicePolling: true
       config:
         enabled: false
