--- a/integration-tests/discovery-tests/pom.xml
+++ b/integration-tests/discovery-tests/pom.xml
@@ -25,6 +25,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>discovery-tests</artifactId>
+  <name>Integration Tests::Discovery Tests</name>
   <packaging>pom</packaging>
 
   <modules>
