--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -27,6 +27,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>integration-tests</artifactId>
+  <name>Integration Tests</name>
   <packaging>pom</packaging>
 
   <modules>
