[#668] replace springfox to spring doc (#693)

--- a/integration-tests/discovery-tests/order-consumer/pom.xml
+++ b/integration-tests/discovery-tests/order-consumer/pom.xml
@@ -47,7 +47,7 @@
       <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.swagger</groupId>
+      <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-core</artifactId>
     </dependency>
   </dependencies>
