--- a/integration-tests/discovery-tests/price-provider/pom.xml
+++ b/integration-tests/discovery-tests/price-provider/pom.xml
@@ -47,7 +47,7 @@
       <artifactId>spring-cloud-starter-huawei-service-engine</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.swagger</groupId>
+      <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-core</artifactId>
     </dependency>
   </dependencies>
