[#668] replace springfox to spring doc. Part2: servicecomb compatible generator

--- a/spring-cloud-huawei-swagger/pom.xml
+++ b/spring-cloud-huawei-swagger/pom.xml
@@ -34,6 +34,10 @@
       <artifactId>springdoc-openapi-ui</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.servicecomb</groupId>
+      <artifactId>swagger-generator-springmvc</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-huawei-common</artifactId>
     </dependency>
