[#668] replace springfox to spring doc (#699)
* [#668] replace springfox to spring doc (#693)

* [#668] replace springfox to spring doc (#693)

* [#696]upgrade spring boot and spring could version (#697)

* [#668] replace springfox to spring doc. Part2: servicecomb compatible generator (#698)

Co-authored-by: zhaozw <zhaozhongwei22@163.com>

--- a/spring-cloud-huawei-swagger/pom.xml
+++ b/spring-cloud-huawei-swagger/pom.xml
@@ -30,12 +30,12 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.swagger.core.v3</groupId>
-      <artifactId>swagger-core</artifactId>
+      <groupId>org.apache.servicecomb</groupId>
+      <artifactId>swagger-generator-springmvc</artifactId>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
