[#709]gateway add dependencies to make test case random fail unlikely

--- a/integration-tests/discovery-tests/account-provider/pom.xml
+++ b/integration-tests/discovery-tests/account-provider/pom.xml
@@ -25,8 +25,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>account-provider</artifactId>
-  <name>Integration Tests::Discovery Tests::Account Provider</name>
+  <artifactId>account-provider-test</artifactId>
+  <name>Integration Tests::Discovery Tests::Account Provider Test</name>
 
   <dependencies>
     <dependency>
