--- a/integration-tests/discovery-tests/discovery-tests-client/pom.xml
+++ b/integration-tests/discovery-tests/discovery-tests-client/pom.xml
@@ -134,14 +134,14 @@
                 </image>
 
                 <image>
-                  <name>account-provider:${project.version}</name>
-                  <alias>account-provider</alias>
+                  <name>account-provider-test:${project.version}</name>
+                  <alias>account-provider-test</alias>
                   <run>
                     <env>
                       <JAVA_OPTS>
                         -Dspring.cloud.servicecomb.discovery.address=http://sc.servicecomb.io:30100
                       </JAVA_OPTS>
-                      <JAR_PATH>/maven/account-provider-${project.version}.jar</JAR_PATH>
+                      <JAR_PATH>/maven/account-provider-test-${project.version}.jar</JAR_PATH>
                     </env>
                     <links>
                       <link>service-center:sc.servicecomb.io</link>
@@ -194,6 +194,8 @@
                      -->
                     <dependsOn>
                       <container>order-consumer-test</container>
+                      <container>price-provider-test</container>
+                      <container>account-provider-test</container>
                     </dependsOn>
                   </run>
                 </image>
