[#709]invocation context support microservice name and instance id(part2)

--- a/spring-cloud-huawei-discovery/pom.xml
+++ b/spring-cloud-huawei-discovery/pom.xml
@@ -74,6 +74,11 @@
       <artifactId>annotations</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-gateway-server</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <!-- end extensions module -->
   </dependencies>
 </project>
