--- a/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
@@ -29,15 +29,12 @@ spring:
         serviceName: price
         version: 0.0.1
         healthCheckInterval: 30
-#      config:
-#        enabled: true
-#        serverType: config-center
-#        serverAddr: http://127.0.0.1:30113
-#        fileSource: provider.yaml
+      config:
+        enabled: true
+        serverType: kie
+        serverAddr: http://127.0.0.1:30110
+        firstPullRequired: false
 
       # testing spring cloud swagger generation
       swagger:
         enableJavaChassisAdapter: false
-
-      config:
-        enabled: false
