[#713]flow control support limit for each source server 2020.0.x 2021.0.x

--- a/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
@@ -29,6 +29,7 @@ spring:
         address: ${PAAS_CSE_SC_ENDPOINT:http://127.0.0.1:30100}
         version: 0.0.1
         healthCheckInterval: 30
+        enableServicePolling: true
       config:
         serverAddr: ${PAAS_CSE_CC_ENDPOINT:http://127.0.0.1:30110}
         serverType: kie
