[#727]retry support on same server and next server

--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
@@ -14,4 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
+spring:
+  cloud:
+    servicecomb:
+      loadbalancer.price:
+        retryOnSame: 1
